--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,7 @@
     "moduleResolution": "bundler",
     "importHelpers": true,
     "paths": {
-      "slider": [
-        "./dist/slider"
-      ]
+      "slider": ["./dist/slider", "./dist/slider/*"],
     },
     "target": "ES2022",
     "module": "ES2022",
