--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,11 @@
     },
     "slider": {
       "projectType": "library",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "projects/slider",
       "sourceRoot": "projects/slider/src",
       "prefix": "lib",
